--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nesine Case Study</title>
+    <title>Misini Cios</title>
   </head>
   <body>
     <div id="root"></div>
